environments/dev/apps/app-food-delivery/services/food-delivery/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: food-delivery
    app.kubernetes.io/part-of: app-food-delivery
  name: food-delivery
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: food-delivery
      app.kubernetes.io/part-of: app-food-delivery
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: food-delivery
        app.kubernetes.io/part-of: app-food-delivery
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: food-delivery
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
