environments/dev/apps/app-food-delivery/services/food-delivery/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: food-delivery
    app.kubernetes.io/part-of: app-food-delivery
  name: food-delivery
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: food-delivery
    app.kubernetes.io/part-of: app-food-delivery
status:
  loadBalancer: {}
