environments/dev/apps/app-food-delivery/services/food-delivery/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: food-delivery
  namespace: dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: food-delivery
    weight: 100
  wildcardPolicy: None
